--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+#adding files
+config.py
+random_numbers.ipynb
+API_practice.ipynb
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
